implemented a short animation in script.js + speed up function

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heartslive - ASCII Art Animation</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet"> <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 class="project-title">Heartslive</h1> <!-- Title Added Here -->
-    <div id="ascii-heart" class="ascii-heart"></div>
+    <div class="canvas-container">
+        <div id="ascii-heart" class="ascii-heart"></div>
+    </div>
     <div class="button-container">
-        <button id="start-btn">Start</button>
-        <button id="reset-btn">Reset</button>
         <button id="speed-up-btn">Speed Up</button>
     </div>
     
